# roots

./: Cargo.toml
roots_common/: Cargo.toml
roots_common/src/: input.rs  lib.rs  spatial.rs
roots_core/: Cargo.toml
roots_core/src/: lib.rs
roots_hecs/: Cargo.toml
roots_hecs/src/: lib.rs  runner.rs  spatial.rs
roots_hecs/src/renderer/: components.rs  mod.rs  pipelines.rs
roots_pipelines/: Cargo.toml
roots_pipelines/src/: lib.rs  line_renderer.rs  model_renderer.rs  texture2d_renderer.rs
roots_pipelines/src/shaders/: line.wgsl  model.wgsl  texture2d.wgsl
roots_renderer/: Cargo.toml
roots_renderer/src/: camera.rs  lib.rs  lighting.rs  model.rs  shared.rs  texture.rs  tools.rs
roots_runner/: Cargo.toml
roots_runner/src/: lib.rs  runner.rs  window.rs
roots_text/: Cargo.toml
roots_text/src/: atlas.rs  lib.rs  shared.rs  ui3d_renderer.rs
roots_text/src/shaders/: ui3d.wgsl
