[package]
name = "roots_pipelines"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
log = "0.4.22"
roots_common = { version = "0.1.0", path = "../roots_common" }
roots_renderer = { version = "0.1.0", path = "../roots_renderer" }
wgpu = "23.0.1"
