[package]
name = "roots_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytemuck = { version = "1.20.0", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
image = "0.25.5"
log = "0.4.22"
pollster = "0.4.0"
roots_common = { version = "0.1.0", path = "../roots_common" }
thiserror = "2.0.3"
wgpu = "23.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "23.0.1", features = ["webgl"] }
