[package]
name = "roots_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
roots_common = { version = "0.1.0", path = "../roots_common" }
winit = "0.30.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
